Add Reservation, Account, Hotels and Rooms managing and other views

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.4",
     "mdbvue": "6.7.1",
     "vue": "^2.6.11",
+    "vue-dynamic-dropdown": "^1.0.12",
     "vue-global-var": "^1.0.0",
     "vue-material-design-icons": "^4.6.0",
     "vue-router": "^3.1.6"
