--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.6.4",
     "mdbvue": "6.7.1",
+    "moment": "^2.26.0",
     "vue": "^2.6.11",
     "vue-dynamic-dropdown": "^1.0.12",
     "vue-global-var": "^1.0.0",
